Navbar and Footer are shown globally now, centralised search bar Fixed issue of image not showing when editing product listed Fixed bug of chatpage not showing upon clicking on 'Chat with Seller'

--- a/nusharousell-latest/src/screens/styles/Footer.css
+++ b/nusharousell-latest/src/screens/styles/Footer.css
@@ -1,9 +1,16 @@
+.body{
+    min-height: 50vh;
+    display: flex;
+    flex-direction: column;
+}
+
 .footer {
     background-color: #f1f1f1; /* Light grey background */
     padding: 0px;
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
+    margin-top: auto;
 }
 
 .footer .logo {
