--- a/nusharousell-latest/src/screens/styles/Homepage.css
+++ b/nusharousell-latest/src/screens/styles/Homepage.css
@@ -4,7 +4,7 @@
 	flex-direction: column;
 	align-items: center;
 	justify-content: space-between;
-	height: 100vh;
+	min-height: 50vh;
 }
 
 .header {
